# Spitfire

./: .gitignore  README.md  app.py  pyproject.toml
Spitfire1/: __init__.py  config.py  models.py  site.db
Spitfire1/base/: routes.py
Spitfire1/dash/: forms.py  routes.py  utils.py
Spitfire1/errors/: handlers.py
Spitfire1/groups/: forms.py  routes.py
Spitfire1/posts/: forms.py  routes.py
Spitfire1/static/: main.css
Spitfire1/templates/: Dashboard.html  Dashboard2.html  Dashbwoard.html  FileView.html  about.html  account.html  base.html  base2.html  base3.html  base4.html  comments.html  create_post.html  creategroup.html  createtask.html  edittask.html  homepage.html  joingroup.html  listusers.html  login.html  news.html  post.html  privacypolicy.html  register.html  reset_request.html  reset_token.html  task.html  task2.html  termsandconditions.html  uploadfile.html  user_posts.html
Spitfire1/users/: forms.py  routes.py  utils.py
migrations/versions/: 16a1a88302be_initial_migration.py  1c816735effc_initial_migration.py  1f1ab49711a3_4.py  2c55eaac2ee6_4.py  379b52918bd7_new_migration.py  3ebf9f1bd34d_initial_migration2324.py  3f221834ea49_migration232.py  4adea0e69b74_migration23.py  57689d13a70c_initial_migration2324.py  60f2afb659c9_initial_migration.py  71e843ea1aee_migration23.py  79a8412b3ea8_migration232.py  87cb1331f28c_migration23.py  8bfa5f6dea17_initial_migration2324.py  a612e2773a8d_.py  a6e4fafd1e6b_initial_migration.py  af2653030a34_migration23.py  b678cb581f3c_2.py  b8423297fa69_initial_migration.py  b85566cfde4e_initial.py  (+10 more)
(+4 files in other folders)
